--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ header{
 </head>
 <body>
 
-<!-- HEADER -->
+<!-- HEADER -->  
 <header>
   <div>INSTAPERFECT</div>
   <div class="header-right">
@@ -553,7 +553,7 @@ window.handleKeyPress = handleKeyPress;
   <div class="chat-header">Chat Admin</div>
   <div class="chat-body" id="chatBody">
     <div class="chat-message chat-bot">
-      Halo! Saya admin Instaperfect. Ada yang bisa saya bantu? Pilih pertanyaan cepat atau tanyakan langsung.
+      Halo! Saya admin Instaperfect. Ada yang bisa saya bantu? Pilih pertanyaan cepat.
     </div>
   </div>
   <div class="chat-footer">
