--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@ function autoReply(text){
   else if(text.toLowerCase().includes("stok")){
     reply = "Sebagian besar produk masih tersedia hari ini.";
   }
-  else if(text.toLowerCase().includes("kirim")){
+  else if(text.toLowerCase().includes("pengiriman")){
     reply = "Kami melayani pengiriman ke seluruh Indonesia.";
   }
 
