--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <meta charset="UTF-8">
 <title>Instaperfect Store</title>
 <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <style>
 * { box-sizing: border-box; font-family:'Quicksand',sans-serif; }
 body{margin:0; background:#000; color:white;}
@@ -555,7 +553,7 @@ window.handleKeyPress = handleKeyPress;
   <div class="chat-header">Chat Admin</div>
   <div class="chat-body" id="chatBody">
     <div class="chat-message chat-bot">
-      Halo! Saya admin Instaperfect. Ada yang bisa saya bantu? Pilih pertanyaan cepat.
+      Halo! Saya admin Instaperfect. Ada yang bisa saya bantu? Pilih pertanyaan cepat atau tanyakan langsung.
     </div>
   </div>
   <div class="chat-footer">
